--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -15,6 +15,7 @@ padding: 20px;
 }
 
 
+
 .profile-imag{
     border-radius: 50px;
 }
@@ -57,57 +58,25 @@ padding: 20px;
     color: white;
   }
   
-  /*   
 
-  .hero {
-    background: url('/assets/hero-image.jpg') no-repeat center center;
-    background-size: cover;
-    color: white;
-    padding: 4rem 2rem;
-  }
-  
-  .hero h1 {
-    font-size: 2.5rem;
-  }
-  
-  .features, .courses, .testimonials, .newsletter {
-    padding: 2rem 1rem;
-  }
-  
-  .feature-cards, .course-cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
-  .feature-card, .course-card {
-    width: 22%;
-    margin-bottom: 1rem;
-  }
-  
-  .testimonial-card {
-    max-width: 600px;
-    margin: 1rem auto;
-  }
-  
-  .newsletter {
-    background-color: #f5f5f5;
-    padding: 2rem;
-  }
-  
-  .newsletter form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .newsletter form mat-form-field {
-    margin-right: 1rem;
-  }
-  
-  .footer {
-    background-color: #3f51b5;
-    color: white;
-    padding: 1rem;
-  }
-   */
+/* TOKEN EXPIRE CSS */
+.tokeExpire{
+  /* float: right; */
+  margin-left: auto;
+  font-size: 15px;
+}
+.warning-minutes {
+  color: red; /* Change to your desired warning color */
+  font-weight: bold;
+  transition: color 0.5s ease-out, transform 0.5s ease-out; /* Add transition for color and transform */
+  transform: scale(1); /* Initial scale for normal state */
+}
+
+.warning-minutes.alert {
+  transform: scale(1.1); /* Scale up when alerting */
+}
+
+.normal-minutes {
+  color: black; /* Default color */
+  transition: color 0.5s ease-out; /* Add transition for color */
+}
