--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -66,7 +66,8 @@ padding: 20px;
   font-size: 15px;
 }
 .warning-minutes {
-  color: red; /* Change to your desired warning color */
+  color: rgb(47, 4, 87); /* Change to your desired warning color */
+  font-size: 20px;
   font-weight: bold;
   transition: color 0.5s ease-out, transform 0.5s ease-out; /* Add transition for color and transform */
   transform: scale(1); /* Initial scale for normal state */
@@ -77,6 +78,6 @@ padding: 20px;
 }
 
 .normal-minutes {
-  color: black; /* Default color */
+  color: rgb(238, 234, 234); /* Default color */
   transition: color 0.5s ease-out; /* Add transition for color */
 }
