--- a/src/app/pages/admin/add-question/add-question.component.html
+++ b/src/app/pages/admin/add-question/add-question.component.html
@@ -159,7 +159,7 @@
                             <span class="file-input-text">Select questions</span>
                           </label>
                           
-                        <button class="upload-btn" mat-raised-button color="accent" (click)="uploadTheoryQuestions()">Upload </button>
+                        <button class="upload-btn" mat-raised-button color="accent" (click)="uploadTheoryQuestionss()">Upload </button>
                     </div>
 
 
