--- a/src/app/pages/user/load-quiz/load-quiz.component.html
+++ b/src/app/pages/user/load-quiz/load-quiz.component.html
@@ -106,16 +106,16 @@
     <mat-card *ngIf="reportData">
       <table *ngFor="let r of reportData">
         <tr>
-          <th>Name </th>
-          <th>Quiz</th>
+          <!-- <th>Name </th>
+          <th>Quiz</th> -->
           <th>OBJ</th>
           <th>Theory</th>
           <th>Status</th>
 
         </tr>
         <tr>
-          <td>{{r.user.lastname}} {{r.user.firstname}}</td>
-          <td>{{r.quiz.title}}</td>
+          <!-- <td>{{r.user.lastname}} {{r.user.firstname}}</td>
+          <td>{{r.quiz.title}}</td> -->
           <td>{{r.marks}}</td>
           <td>{{r.marksB}}</td>
           <td>{{r.progress}}</td>
