--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -47,7 +47,10 @@
                         </mat-card-content>
                     </mat-card>
                 </div>
-
+<!-- {{quiz|json}}
+{{quizTitle}}
+<hr>
+{{noOfQuesObject | json}} -->
 
                 <div class="col-md-8">
                     
@@ -139,7 +142,7 @@
                             <!-- {{resetData |json}} -->
                             <mat-card class="cards"
                                 style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
-                            <mat-label> SECTION B -{{(timeT*60)/60}} minutes </mat-label>
+                            <mat-label> SECTION B -{{(timeT * 60)/60}} minutes </mat-label>
                             </mat-card>
                           
 
