Theory and Quiz to be combined and not create a different report for each

--- a/src/app/pages/user/start/start.component.css
+++ b/src/app/pages/user/start/start.component.css
@@ -11,6 +11,14 @@
   .mat-form-field {
     width: 100%;
 }
+
+.navselect{
+  align-items: center;
+  
+}
+.pagination-controls{
+  align-items: center;
+}
   
   /* .prefix-item {
     display: flex;
