--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -38,7 +38,7 @@
                     <mat-card class="cards fixed-card">
                         <mat-card-header>
                             <mat-card-title>Time Left: </mat-card-title>
-                          </mat-card-header>
+                        </mat-card-header>
                         <mat-card-content>
                             <h1 class="text-center"><i>{{ getFormmatedTime() }} </i></h1>
                             <!-- <mat-spinner [value]="(this.time/(this.questions.length * 2 * 60)) * 100"  -->
@@ -47,13 +47,13 @@
                         </mat-card-content>
                     </mat-card>
                 </div>
-<!-- {{quiz|json}}
+                <!-- {{quiz|json}}
 {{quizTitle}}
 <hr>
 {{noOfQuesObject | json}} -->
 
                 <div class="col-md-8">
-                    
+
 
                     <ng-container>
                         <h1 class="mt20">On going quiz {{quizTitle}} for <b> {{courseTitle}}</b></h1>
@@ -62,63 +62,68 @@
 
                     <div *ngIf="questions.length>0">
 
-                    <div *ngIf="questions">
+                        <div *ngIf="questions">
 
-                        <mat-card class="cards"
-                        style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
-                    <mat-label> SECTION A -{{(timeO * 60)/60}} minutes </mat-label>
-                    </mat-card>
-                    </div>
+                            <mat-card class="cards"
+                                style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
+                                <mat-label> SECTION A -{{(timeO * 60)/60}} minutes </mat-label>
+                            </mat-card>
+                        </div>
 
 
-                    <mat-card
-                        *ngFor="let q of questions| paginate:{itemsPerPage: tableSize, currentPage:page, totalItems:count}; let i = index"
-                        class="mt10">
+                        <mat-card
+                            *ngFor="let q of questions| paginate:{itemsPerPage: tableSize, currentPage:page, totalItems:count}; let i = index"
+                            class="mt10">
 
-                    
-                        <!-- 2345tttt#@$$%33333 -->
 
-                        <!-- MULTIPLE SELECTIONS STARTS -->
+                            <!-- 2345tttt#@$$%33333 -->
 
-                        <mat-card-content>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <p> <b> Q {{q.count}} </b> <span class="ml10" [innerHTML]="q.content"></span> </p>
-                                </div>
+                            <!-- MULTIPLE SELECTIONS STARTS -->
 
-                                <!-- <div class="col-md-1" *ngIf="q.givenAnswer">
+                            <mat-card-content>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <p> <b> Q {{q.count}} </b> <span class="ml10" [innerHTML]="q.content"></span>
+                                        </p>
+                                    </div>
+
+                                    <!-- <div class="col-md-1" *ngIf="q.givenAnswer">
                                 <mat-checkbox class="example-margin" checked disabled></mat-checkbox>-->
-                                <!-- </div> -->
-                            </div>
-
-                            <mat-divider></mat-divider>
-                            <br />
-
-
-                            <div class="row mt20">
-                                <div class="col-md-6">
-                                    <mat-checkbox [checked]="q.givenAnswer.includes(q.option1)"
-                                        (change)="updateSelectedAnswers(q, q.option1, $event.checked)"> {{q.option1}}
-                                    </mat-checkbox>
+                                    <!-- </div> -->
                                 </div>
-                                <div class="col-md-6">
-                                    <mat-checkbox [checked]="q.givenAnswer.includes(q.option2)"
-                                        (change)="updateSelectedAnswers(q, q.option2, $event.checked)"> {{q.option2}}
-                                    </mat-checkbox>
+
+                                <mat-divider></mat-divider>
+                                <br />
+
+
+                                <div class="row mt20">
+                                    <div class="col-md-6">
+                                        <mat-checkbox [checked]="q.givenAnswer.includes(q.option1)"
+                                            (change)="updateSelectedAnswers(q, q.option1, $event.checked)">
+                                            {{q.option1}}
+                                        </mat-checkbox>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <mat-checkbox [checked]="q.givenAnswer.includes(q.option2)"
+                                            (change)="updateSelectedAnswers(q, q.option2, $event.checked)">
+                                            {{q.option2}}
+                                        </mat-checkbox>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <mat-checkbox [checked]="q.givenAnswer.includes(q.option3)"
+                                            (change)="updateSelectedAnswers(q, q.option3, $event.checked)">
+                                            {{q.option3}}
+                                        </mat-checkbox>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <mat-checkbox [checked]="q.givenAnswer.includes(q.option4)"
+                                            (change)="updateSelectedAnswers(q, q.option4, $event.checked)">
+                                            {{q.option4}}
+                                        </mat-checkbox>
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <mat-checkbox [checked]="q.givenAnswer.includes(q.option3)"
-                                        (change)="updateSelectedAnswers(q, q.option3, $event.checked)"> {{q.option3}}
-                                    </mat-checkbox>
-                                </div>
-                                <div class="col-md-6">
-                                    <mat-checkbox [checked]="q.givenAnswer.includes(q.option4)"
-                                        (change)="updateSelectedAnswers(q, q.option4, $event.checked)"> {{q.option4}}
-                                    </mat-checkbox>
-                                </div>
-                            </div>
-                        </mat-card-content>
-                        <!-- MULTIPLE SELECTIONS ENDS -->
+                            </mat-card-content>
+                            <!-- MULTIPLE SELECTIONS ENDS -->
 
 
 
@@ -126,15 +131,15 @@
 
 
 
-                    </mat-card>
-                    <!-- PAGINATION -->
-                    <div>
-                        <pagination-controls previousLabel="Prev" nextLabel="Next"
-                            (pageChange)="onTableDataChange($event)">
-                        </pagination-controls>
+                        </mat-card>
+                        <!-- PAGINATION -->
+                        <div>
+                            <pagination-controls previousLabel="Prev" nextLabel="Next"
+                                (pageChange)="onTableDataChange($event)">
+                            </pagination-controls>
+                        </div>
+
                     </div>
-
-                </div>
 
                     <!-- subjective questions here -->
                     <div *ngIf="currentQuestions; else elseBlock">
@@ -142,16 +147,16 @@
                             <!-- {{resetData |json}} -->
                             <mat-card class="cards"
                                 style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
-                            <mat-label> SECTION B -{{(timeT * 60)/60}} minutes </mat-label>
+                                <mat-label> SECTION B -{{(timeT * 60)/60}} minutes </mat-label>
                             </mat-card>
-                          
+
 
 
                             <form>
                                 <mat-card class="cards"
                                     style=" margin: 20px;font-size:18px; color: white;text-align: center; background-color: rgb(86, 82, 82);">
                                     <!-- Question {{ currentPage + 1 }} -->
-                                    
+
                                 </mat-card>
 
                                 <!-- <div *ngIf="currentQuestions"> -->
@@ -175,27 +180,26 @@
                             </form>
                             <mat-card-actions>
                                 <mat-card>
-                                    <div class="pagination-controls">
-                                        <button type="submit" mat-raised-button color="primary" (click)="prevPage()"
-                                            [disabled]="currentPage === 0">Previous</button>
-                                        <span style="color: blueviolet; font-size: large; border: 2px solid red;">
-                                            
-                                            {{ prefixes[currentPage] }} of {{ prefixes[prefixes.length-1]}} </span>
-                                        <button type="submit" mat-raised-button color="primary" (click)="nextPage()"
-                                            [disabled]="currentPage === prefixes.length - 1">Next</button>
-                                    </div>
-                                    <!-- <button type="submit" (click)="onSubmit()" mat-raised-button [disabled]="isSubmitDisabled"
-                            color="primary">Submit</button> -->
-                                </mat-card>
-
-
-
-                                <mat-card>
-                                    <div class="container">
+                                    <div class="container navselect">
                                         <div class="row">
-                                            <div class="col-md-12">
-                                                <!-- <mat-label>Select set of questions answered!</mat-label> -->
-                                                <mat-card-title>Select {{numberOfQuestionsToAnswer}} set(s) of questions
+                                            <div class="col-md-6">
+                                                <div class="pagination-controls">
+                                                    <button type="submit" mat-raised-button color="primary"
+                                                        (click)="prevPage()"
+                                                        [disabled]="currentPage === 0">Previous</button>
+                                                    <span
+                                                        style="color: blueviolet; font-size: large; border: 2px solid red;">
+
+                                                        {{ prefixes[currentPage] }} of {{
+                                                        prefixes[prefixes.length-1]}}
+                                                    </span>
+                                                    <button type="submit" mat-raised-button color="primary"
+                                                        (click)="nextPage()"
+                                                        [disabled]="currentPage === prefixes.length - 1">Next</button>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <mat-card-title style="font-size: 16px; font-family: 'Times New Roman', Times, serif; color: blueviolet;">Select {{numberOfQuestionsToAnswer}} set(s) of questions
                                                     answered!</mat-card-title>
                                                 <div *ngIf="prefixes.length > 0" class="prefix-container">
                                                     <div *ngFor="let prefix of prefixes" class="prefix-item">
@@ -204,15 +208,15 @@
                                                             {{ prefix }}
                                                         </mat-checkbox>
                                                     </div>
-
                                                 </div>
+
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- </div> -->
                                 </mat-card>
                             </mat-card-actions>
                         </mat-card>
-
                         <!-- BUTTON IF SUBJECTIVE IS INCLUSIVE -->
                         <div class="contianer centerbtn mt20 mb20">
                             <button mat-raised-button color="primary" (click)="submitAllQuiz()"
@@ -243,7 +247,7 @@
 
                 <div class="large-devices col-md-2 fixed-card">
                     <!-- progres -->
-                     <!-- {{timerAll}}
+                    <!-- {{timerAll}}
                      {{timeO}}
                      {{timeT}} -->
                     <mat-card class="cards">
@@ -287,13 +291,13 @@
                         <h3>Attempted questions : {{attempted}}</h3> -->
 
 
-                        <!-- <app-print-quiz [attempts]="attempteed"></app-print-quiz>                -->
+    <!-- <app-print-quiz [attempts]="attempteed"></app-print-quiz>                -->
 
 
-                    <!-- </div>
+    <!-- </div>
                 </div> -->
 
-                <!-- <mat-card *ngFor="let qA of questionWithAnswers; let i = index" class="mt10">
+    <!-- <mat-card *ngFor="let qA of questionWithAnswers; let i = index" class="mt10">
 
                     <mat-card-content>
                         <p> <b> Q {{ i + 1}} </b> <span class="ml10" [innerHTML]="qA.content"></span></p>
@@ -327,7 +331,7 @@
                     </mat-card-content>
                 </mat-card> -->
 
-            <!-- </div>
+    <!-- </div>
         </div>
     </div> -->
 
