--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<!-- <mat-card>
     <mat-action-list>
 <div mat-subheader>Menu</div>
 
@@ -35,4 +35,4 @@
 </mat-card>
 
 
-<!-- alt + shift + downkey => paste option -->
+alt + shift + downkey => paste option -->
