--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -2,12 +2,19 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-md-2">
-                <app-sidebar-user></app-sidebar-user>
+            <!-- <div class="col-md-2">
+                <app-navbar></app-navbar>
 
-            </div>
-            <div class="col-md-10">
+            </div> -->
+
+            <!-- <div class="col-md-12">
                 <router-outlet></router-outlet>
+            </div> -->
+
+            <div class="col-md-12">
+                <app-navbar></app-navbar>
+            
+            <!-- <router-outlet></router-outlet> -->
             </div>
 
         </div>
