--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,13 @@ text="Loading information!"
 <!-- <div> -->
 
     <!-- navbar static content -->
-<app-navbar></app-navbar>
 
-
-<!-- dynamic content -->
+    <!-- <app-sidebar></app-sidebar> -->
+     <!-- dynamic content -->
+     <!-- <app-navbar></app-navbar> -->
 <router-outlet></router-outlet>
+
+
+
 <!-- </div> -->
 <app-footer></app-footer>
