--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div class="bootstrap-wrapper">
     <div class="container-fluid">
         <div class="row">
-<div class="col-md-2">
-    <app-sidebar></app-sidebar>
-</div>
 
-<div class="col-md-10 ">
-<router-outlet></router-outlet>
+
+<div class="col-md-12">
+    <app-navbar></app-navbar>
+
+<!-- <router-outlet></router-outlet> -->
 </div>
 
 
