--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -33,11 +33,11 @@
                 </div>
 
                 <!-- Timer couter on small devices -->
-                <div class="small-devices col-md-2 text-center">
+                <div class="small-devices col-md-2">
                     <!-- progres -->
-                    <mat-card class="cards fixed-card">
+                    <!-- <mat-card class="card fixed-card"> -->
                         <mat-card-header>
-                            <mat-card-title>Time Left: </mat-card-title>
+                            <!-- <mat-card-title>Time Left: </mat-card-title> -->
                         </mat-card-header>
                         <mat-card-content>
                             <h1 class="text-center"><i>{{ getFormmatedTime() }} </i></h1>
@@ -45,7 +45,7 @@
                             <!-- <mat-spinner [value]="(timer/(this.questions.length  * 60)) * 100 " mode="determinate"
                                 color="accent" style="margin: auto;"></mat-spinner> -->
                         </mat-card-content>
-                    </mat-card>
+                    <!-- </mat-card> -->
                 </div>
                 <!-- {{quiz|json}}
 {{quizTitle}}
