--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,9 +8,9 @@
     </button> -->
       <span>ACT LTD</span>
       <span class="example-spacer"></span>
-      <a mat-button routerLink="/home1">Home</a>
-      <a mat-button routerLink="/about">About</a>
-      <a mat-button routerLink="/contact">Contact</a>
+      <a mat-button routerLink="/">Home</a>
+      <!-- <a mat-button routerLink="/about">About</a>
+      <a mat-button routerLink="/contact">Contact</a> -->
 
       <a *ngIf="!isloggedIn" [routerLink]="'/signup'" mat-button aria-label="Example icon-button with heart icon">
         Register </a>
