--- a/src/app/pages/user/instructions/instructions.component.html
+++ b/src/app/pages/user/instructions/instructions.component.html
@@ -17,37 +17,37 @@ text="Loading instructions"
 {{reportQuizId | json}} -->
 
 <div ngxUiLoaderBlurred (blur)="10">
-<div class="bootstrap-wrapper">
-    <div class="contianer">
+<div class="">
+    <div class="contianer card">
         <div class="row">
-            <div class="col-md-12">
-                <mat-card class="mt20">
+            <div class="col-md-12 ">
+                <mat-card class="">
                     <mat-card-header>
                         <!-- Heading -->
                         <mat-card-title>
                             Quiz Instructions || Read it carefully
                         </mat-card-title>
-                        <mat-card-subtitle>
+                        <!-- <mat-card-subtitle>
                             One step to go
-                        </mat-card-subtitle>
+                        </mat-card-subtitle> -->
                     </mat-card-header>
 
-                    <mat-card-content class="ml20">
+                    <mat-card-content class="">
                         <!-- Content -->
                         <h1>{{quiz.title}}</h1>
                         <p>{{quiz.description}}</p>
                         <mat-divider></mat-divider>
                         <br>
                         <h1>Important Notice</h1>
-                        <ul>
+                        <ul style="list-style: none;">
                             <!-- {{timeT}} -->
 
                             <!-- {{timeO}}
 
                             {{timerAll}} -->
-                            <li>This quiz is for practice purposes</li>
+                            <!-- <li>This quiz is for practice purposes</li> -->
                             <li>This quiz is just for <b>   {{getFormmatedTime()}} </b> </li>
-                            <li>You can attempt any number times</li>
+                            <!-- <li>You can attempt any number times</li> -->
                             <li *ngIf="timeO > 0">There are <b>{{quiz.numberOfQuestions}} objectives questions </b> in total</li>
                             <li>Each question carries <b> {{quiz.maxMarks/quiz.numberOfQuestions}} mark(s)</b>. No
                                 negative marking for wrong ones.</li>
@@ -56,13 +56,13 @@ text="Loading instructions"
                         <mat-divider></mat-divider>
                         <br>
                         <h1>Attempting Quiz</h1>
-                        <ul>
-                            <li>Click the <b>Start Quiz</b> button to start the quiz</li>
-                            <li>The time will start as soon as you click the start button </li>
+                        <ul style="list-style: none;">
+                            <li>Click the <b>Start Quiz</b> button to start the quiz, then enter quiz password</li>
+                            <li>The time will start as soon as you start</li>
                             <li>You can't resume this quiz, if interrupted for any reason</li>
                             <li>Click on submit Quiz button on th completion of the quiz</li>
                             <li>Click on Next button to move to the next question</li>
-                            <li>Your report will be generated as PDF automatically. </li>
+                            <li>You can print your report as PDF after submitting. </li>
                         </ul>
                     </mat-card-content>
 
@@ -80,48 +80,7 @@ text="Loading instructions"
                         <!-- Action -->
                     </mat-card-actions>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 </mat-card>
-<!-- ON THE PRINT PAGE ADD THE LOADER -->
 
             </div>
         </div>
